# SniperKit-Core

./: .env  .gitignore  .venv  Dockerfile.dev  LICENSE  README.md  crane.yml  docker-compose.dev.yml  requirements.txt
.References/src/github.com/reinterpretcat/utymap_generative_3d_map/core/: CMakeLists.txt
Docs/: REFERENCES.md  SEARCH-ENGINES.md  (+3 more)
NativePlugins/: CMakeLists.txt  make_android.sh
NativePlugins/_builds/android-ndk-r15c-api-19-x86-Releaase/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/android-ndk-r15c-api-19-x86-Releaase/_3rdParty/Hunter/config-id/: config.cmake
NativePlugins/_builds/android-ndk-r15c-api-19-x86-Releaase/_3rdParty/Hunter/toolchain/: toolchain.info
NativePlugins/_builds/android-ndk-r15c-api-9-armeabi-v7a-neon-c11-Releaase/_3rdParty/Hunter/toolchain/: toolchain.info
NativePlugins/_builds/gcc-Release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
NativePlugins/_builds/gcc-Release/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/gcc-Release/_3rdParty/Hunter/toolchain/: toolchain.info
NativePlugins/_builds/gcc-Release/_3rdParty/polly/: saved-arguments
NativePlugins/_builds/gcc-Release/tstunity.bundle/Contents/: Info.plist
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  install_postBuildPhase.makeRelWithDebInfo  tstunity_postBuildPhase.makeDebug  tstunity_postBuildPhase.makeRelease
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/_3rdParty/Hunter/config-id/: config.cmake
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/_3rdParty/Hunter/toolchain/: toolchain.info
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/_3rdParty/polly/: saved-arguments
NativePlugins/_builds/ios-11-0-dep-8-0-libcxx-hid-sections/tstunity.xcodeproj/: project.pbxproj
NativePlugins/_builds/osx-10-13/: CPackConfig.cmake  CPackSourceConfig.cmake
NativePlugins/_builds/osx-10-13/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/osx-10-13/_3rdParty/Hunter/config-id/: config.cmake
NativePlugins/_builds/osx-10-13/_3rdParty/Hunter/toolchain/: toolchain.info
NativePlugins/_builds/xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
NativePlugins/_builds/xcode-gcc/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
NativePlugins/_builds/xcode-gcc/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  tstunity_postBuildPhase.makeMinSizeRel  tstunity_postBuildPhase.makeRelease
NativePlugins/_builds/xcode-gcc/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/xcode-gcc/_3rdParty/Hunter/config-id/: config.cmake
NativePlugins/_builds/xcode-gcc/_3rdParty/polly/: saved-arguments
NativePlugins/_builds/xcode-gcc/tstunity.build/Release/ALL_BUILD.build/: Script-89BA88A9AF89441D944447F3.sh  dgph
NativePlugins/_builds/xcode-gcc/tstunity.build/Release/ZERO_CHECK.build/: Script-68A35AAF67FF44BEBB50DBB5.sh  dgph
NativePlugins/_builds/xcode-gcc/tstunity.build/Release/tstunity.build/: Script-460EB5A576A74B8E8E577338.sh  dgph
NativePlugins/_builds/xcode-gcc/tstunity.xcodeproj/: project.pbxproj
NativePlugins/_builds/xcode-hid-sections/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
NativePlugins/_builds/xcode-hid-sections/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  package_postBuildPhase.makeRelease
NativePlugins/_builds/xcode-hid-sections/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/xcode-hid-sections/_3rdParty/polly/: saved-arguments
NativePlugins/_builds/xcode-hid-sections/tstunity.xcodeproj/: project.pbxproj
NativePlugins/_builds/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  package_postBuildPhase.makeMinSizeRel
NativePlugins/_builds/xcode/_3rdParty/Hunter/: install-root-dir
NativePlugins/_builds/xcode/_3rdParty/polly/: saved-arguments
NativePlugins/_builds/xcode/tstunity.xcodeproj/: project.pbxproj
NativePlugins/_logs/polly/android-ndk-r15c-api-19-x86/: log.txt
NativePlugins/_logs/polly/android-ndk-r15c-api-9-armeabi-v7a-neon-c11/: log-0.txt  log.txt
NativePlugins/_logs/polly/gcc-static/: log.txt
NativePlugins/_logs/polly/ios-11-0-dep-8-0-libcxx-hid-sections/: log-1.txt  log-2.txt  log-3.txt  log-4.txt  log.txt
NativePlugins/_logs/polly/linux-gcc-x64/: log.txt
NativePlugins/_logs/polly/osx-10-13/: log-1.txt  log-10.txt  log-11.txt  log-12.txt  log-13.txt  log-14.txt  log-15.txt  log-16.txt  log-18.txt  log-19.txt  log-2.txt  log-20.txt  log-21.txt  log-22.txt  log-23.txt  log-24.txt  log-25.txt  log-26.txt  log-28.txt  log-29.txt  log-3.txt  log-30.txt  log-31.txt  log-32.txt  log-33.txt  log-34.txt  log-35.txt  log-36.txt  log-37.txt  log-38.txt  log-39.txt  log-4.txt  log-40.txt  log-41.txt  log-42.txt  log-44.txt  log-45.txt  log-46.txt  log-47.txt  log-48.txt  (+18 more)
NativePlugins/_logs/polly/xcode-gcc/: log-0.txt  log-1.txt  log-10.txt  log-11.txt  log-12.txt  log-2.txt  log-3.txt  log-4.txt  log-5.txt  log-6.txt  log-7.txt  log-8.txt  log-9.txt  log.txt
NativePlugins/cmake/: HunterGate.cmake
NativePlugins/cmake/Hunter/: config.cmake
NativePlugins/cmake/Modules/: set_opencv_cmake_args_windows.cmake
NativePlugins/cmake/config/: cmake-vars.yml  hunter-add-packages.yml  hunter-gate.yml
NativePlugins/scripts/: make_win.bat  polly_ios.sh
NativePlugins/scripts/helpers/: run_clang_format.sh
(+512 files in other folders)
